clang/test/BSC/Negative/nullptr_invalid_cast.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test invalid nullptr casts - should produce errors/warnings

// nullptr cast to non-pointer types (should warn)
void test_nullptr_to_non_pointer(void) {
  int i = (int)nullptr; // expected-error {{cannot cast an object of type 'nullptr_t' to 'int'}}
  char c = (char)nullptr; // expected-error {{cannot cast an object of type 'nullptr_t' to 'char'}}
  short s = (short)nullptr; // expected-error {{cannot cast an object of type 'nullptr_t' to 'short'}}
  unsigned u = (unsigned)nullptr; // expected-error {{cannot cast an object of type 'nullptr_t' to 'unsigned int'}}
}

// nullptr cast to struct/union/enum (should error)
struct TestStruct {
  int x;
};

union TestUnion {
  int i;
  float f;
};

enum TestEnum {
  VALUE1,
  VALUE2
};

void test_nullptr_to_aggregate(void) {
  struct TestStruct s = (struct TestStruct)nullptr; // expected-error {{cannot cast an object of type 'nullptr_t' to 'struct TestStruct'}}
  union TestUnion u = (union TestUnion)nullptr; // expected-error {{cannot cast an object of type 'nullptr_t' to 'union TestUnion'}}
  enum TestEnum e = (enum TestEnum)nullptr; // expected-error {{cannot cast an object of type 'nullptr_t' to 'enum TestEnum'}}
}

// nullptr in safe zone with incompatible pointer types
_Safe void test_safe_zone_incompatible_cast(void) {
  // Safe zone forbids implicit conversions between different pointer types
  int *pi = (void *)nullptr; // expected-error {{conversion from type 'void *' to 'int *' is forbidden in the safe zone}}
  char *pc = (int *)nullptr; // expected-error {{conversion from type 'int *' to 'char *' is forbidden in the safe zone}}

  // Function pointer type mismatches in safe zone
  void (*fp1)(int) = (void (*)(void))nullptr; // expected-error {{incompatible function pointer types initializing 'void (*)(int)' with an expression of type 'void (*)(void)'}}
  int (*fp2)(char *) = (void (*)(int))nullptr; // expected-error {{incompatible function pointer types initializing 'int (*)(char *)' with an expression of type 'void (*)(int)'}}
}

// nullptr arithmetic (should error)
void test_nullptr_arithmetic(void) {
  void *p1 = nullptr + 1; // expected-error {{invalid operands to binary expression ('nullptr_t' and 'int')}}
  void *p2 = nullptr - 1; // expected-error {{invalid operands to binary expression ('nullptr_t' and 'int')}}
  void *p3 = 1 + nullptr; // expected-error {{invalid operands to binary expression ('int' and 'nullptr_t')}}
}

// nullptr with array types (arrays cannot be assigned)
void test_nullptr_array_assignment(void) {
  int arr[10];
  arr = (int [10])nullptr; // expected-error {{cannot cast an object of type 'nullptr_t' to 'int[10]'}}
}

// Safe zone: _Owned/_Borrow qualifier mismatches
_Safe void test_safe_owned_borrow_mismatch(void) {
  int * _Owned po = (int * _Borrow)nullptr; // expected-error {{conversion from type 'int *_Borrow' to 'int *_Owned' is forbidden in the safe zone}}
  int * _Borrow pb = (int * _Owned)nullptr; // expected-error {{conversion from type 'int *_Owned' to 'int *_Borrow' is forbidden in the safe zone}}
}

// Safe zone: pointer to different qualifiers
_Safe void test_safe_cv_qualifier_mismatch(void) {
  int *p = (const int *)nullptr; // expected-error {{conversion from type 'const int *' to 'int *' is forbidden in the safe zone}}
  volatile int *vp = (const int *)nullptr; // expected-error {{conversion from type 'const int *' to 'volatile int *' is forbidden in the safe zone}}
}

// nullptr to function (not function pointer)
void test_function(void) {}

void test_nullptr_to_function(void) {
  void *p = (void *)test_function; // This is valid - function to pointer conversion
  test_function = nullptr; // expected-error {{non-object type 'void (void)' is not assignable}}
}
